style.css
@media only screen and (max-device-width: 480px){
    html, body{
        height: 91vh;
    }
}

@media only screen and (min-device-width: 481px){
    html, body{
        height: 100vh;
    }
}

html{
    background-color: black;
    scroll-behavior: smooth;
    font-size: 10px;
}

.wrapper{
    background-color: black;
    overflow-x: hidden;
    perspective: 10px;
    margin: 0;
}

body{
    font-family: "Source Code Pro";
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: 0;
}

.section{
    display: flex;
    flex-direction: column;
    height: clamp(60vh, 80vw, 60vh);
    width: 100vw;
}

h1{
    margin-top: 2rem;
    margin-bottom: 0;
    text-align: center;
    font-size: clamp(2rem, 3vmin, 3rem);
}

.info{
    display: flex;
    flex-direction: row;
    flex: 1;
}

/*------------------------SECTION ONE------------------------*/ 

.sectionOne{
    height: 80vh;
    font-family: 'Playfair Display', serif;
    display: flex;
    flex-direction: row;
    align-items: center;
    text-align: center;
    font-size: 2rem;
    color: white;

    transform-style: preserve-3d;
    z-index: -1;
}

#profilePhoto{
    height: min(400px, 70%);
    width: min(400px, 70%);
    border-radius: 2000px;
    margin-left: 20%;
}

#background{
    position: absolute;
    height: 150%;
    width: 150%;
    object-fit: cover;
    margin-top: 8%;
    margin-left: 200px;

    z-index: -1;
    transform: translateZ(-10px) scale(2.35); 
}

.landingText{
    flex: 7;
    /* margin-bottom: 4em; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

hr{
    background-color: white;
    height: 1px;
    width: 40%;
    margin-top: 1rem;
    margin-bottom: 0;
    border: 0;
}

.iconLinks{
    margin-top: 0.25rem;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.iconLinks img{
    filter: invert();
    width: 3rem;
    margin: 0 .2rem;
}

#emailButton{
    all: none;
    background-color: transparent;
    border: none;
    padding: none;
    margin-right: -0.3rem;
    font-family: "Source Code Pro";
    cursor: pointer;
}

#emailIcon{
    width: 3rem;
}

#githubIcon{
    width: 4rem;
    margin: 0;
}



#name, #portfolioHeader{
    margin: 0;
}

#name{
    font-size: clamp(3.4rem, 4vw, 5rem);
    margin-bottom: -0.5rem
}

.onePad{
    flex: 6;
}

/*
#topName{
    float: left;
}

.nav a{
    float: right;
}

.nav a, #topName{
    color: white;
    text-align: center;
    padding: 14px 16px;
    font-size: min(18px, 1.8vw);
    text-decoration: none;
    transition: 0.5s;
}

.nav a:hover{
    background-color: lightpink;
}
*/

/*------------------------SECTION TWO------------------------*/

.sectionTwo{
    background-color: white;
    height: fit-content;
    transform-style: preserve-3d;
}

.twoLeft{
    background-color: #182B49;
    color: white;
    align-self: center;
    margin: 0 2rem;
    padding: 4em 0;
    flex: 3;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.twoLeft p{
    font-size: clamp(1.3rem, 1.75vmin, 10rem);
}

.twoRight{
    flex: 6;

    display: flex;
    flex-direction: column;
    text-align: left;
    justify-content: center;
    font-size: clamp(0.75rem, 1.75vmin, 1.5rem);
}

#twoInfo{
    margin: 2rem 0;
}

.twoPad{
    flex: 0.5;
}

#seal{
    width: min(80%, 25rem);
}

.twoRight h3{
    margin: 0;
}

/*------------------------SECTION THREE------------------------*/

.sectionThree{
    background-color: black;
    height: fit-content; 
    transform-style: preserve-3d;
}

#viewAll{
    text-align: center;
    text-decoration: none;
}

#viewAll:hover{
    filter: brightness(80%);
}

#threeInfo{
    margin: 2rem 5vw;
    justify-content: center;

    display: grid;
    grid-template-columns: repeat(auto-fit, 25rem);
    grid-gap: 2rem;
}

.project{
    background-color: grey;
    height: 25rem;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-decoration: none;
}

.project p{
    font-family: "Source Code Pro";
    text-align: center;
    color: yellow;
}

.projectName{
    color: white;
    font-size: 3rem;
}

.project:hover{
    filter: brightness(140%);
}

.project:hover h3{
    filter: brightness(70%);
}

.sectionThree h2{
    color: white;
    text-align: center;
    margin-top: 1rem;
    margin-bottom: -1rem;
}

#tictactoe{
    background-image: url(images/tictactoe.jpg);
    background-size: contain;
}

#wordle{
    background-image: url(images/wordle.jpg);
    background-size: contain;
}

#portfolio{
    background-image: url(images/ucsd.jpeg);
    background-size: 300%;
    background-position-x: -95%;
    background-position-y: 43%;
    image-rendering: pixelated;
}

#portfolio:hover{
    filter: brightness(115%);
}

#projectsHeader{
    color: white;
    margin-top: 2rem;
}

/*------------------------SECTION FOUR------------------------*/

.sectionFour{
    background-color: white;
    height: fit-content;
    transform-style: preserve-3d;
    align-items: center;
}

#fourInfo{
    margin-top: 1rem;
    width: min(70vw, 450px);
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: repeat(2, 1fr);
    row-gap: 1rem;
    text-align: center;
}

.line, .line1{
    margin-left: 2.5rem;
    height: 6rem;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    text-decoration: none;
    color: black;
    cursor: pointer;
}

.line p{
    margin: 0 1rem;
}

.contact{
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: flex-start;
}

.contactType{
    font-size: 1.5rem;
    margin: 1rem;
}

.line img{
    height: 80%;
}

.sectionFour button{
    background-color: white;
    border: none;
    padding: none;
    margin-left: 1.95rem;
    font-family: "Source Code Pro";
}

.contactName{
    font-size: 1rem;
    text-align: left;
}

/*------------------------FOOTER------------------------*/

.footer{
    background-color: white;
    text-align: center;
    transform-style: preserve-3d;
    margin: 0;
    padding-top: 2vh;
    padding-bottom: 1vh;
}

/*------------------------SECTION TWO------------------------ 

.sectionTwo{
    background-color: white;
    height: 710px;
}

#educationHeader{
    text-align: center;
    margin-bottom: 0;
}

.twoLeft{
    float: left;
    width: 40%;
    height: 510px;
}

.twoRight{
    float: right;
    width: 60%;
    height: 510px;
}

.degree{
    position: relative;
    float: right;
    background-color: #182B49;
    width: 80%;
    max-width: 400px;
    height: 450px;
    text-align: center;
    color: white;

    margin: 30px 20px 50px 0; 
}

.degreeInfo{
    width: 100%;
    font-size: min(16px, 3vw);

    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.degreeInfo p{
    margin: 8px 4px;
}

#seal{
    max-width: 70%;
}

.courses{
    float: left;
    position: relative;
    height: 500px;
    width: 90%;
    max-width: 800px;
    overflow: hidden;
    color: black;

    margin: 2px 0 50px 3%;
    font-size: min(14px, 2vw);
}

.courseList{
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.primarySkills{
    display: flex;
    align-items: center;
    width: 100%;
    height: 100px;
    justify-content: center;
    font-size: min(2vw, 18px);
}

.primarySkills img{
    width: min(100px, 11vw);
    margin: 0 10px 0 0;
}

#javaIcon{
    margin: 0; 
}

.otherSkills{
    display: flex;
    align-items: center;
    width: 100%;
    height: min(60px, 6vw);
    justify-content: center;
    font-size: min(2vw, 16px);
}

.otherSkills img{
    width: min(50px, 6vw);
    margin: 0 0 0 5px;
}

/*------------------------SECTION THREE------------------------

.sectionThree{
    background-color: lightgrey;
    height: 702px;
}

#projectsHeader{
    text-align: center;
    padding: 16px 10px 0 16px;
}

.projectIcons{
    width: 100%;
    height: 632px;
    text-align: center;
}

.row{
    height: 300px;
    width: 100%;
    text-align: center;
}

/*
#rowOne{
    background-color: lightblue;
}

#rowTwo{
    background-color: navy;
}
*/

/*
#rowOne div[class="project"]{
    margin: 52px 12px;
}

#rowTwo div[class="project"]{
    margin: 12px;
}

.project{
    display: inline-block;
    background-color: white;
    width: 236px;
    height: 236px;
}

.projectIcons h3{
    background-color: grey;
}
*/

/*------------------------SECTION FOUR------------------------

.sectionFour{
    background-color: white;
    width: 100%;
    height: 550px;
    position: relative;
}

.fourLeft{
    float: left;
    width: 45%;
    height: 100%
}

.contactsWrapper{
    float: right;
    height: 100%;
    width: min(400px, 90%);
    margin: 0 10px 0 0;
    position: relative;
}

#contactsImage{
    width: 100%;
    border-radius: 50%;

    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.fourRight{
    float: right;
    width: 55%;
    height: 100%;
}

.contactList{
    width: min(700px, 55%);
    height: 40%;

    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

#contactsHeader{
    text-align: center;
}

.icons{
    width: 100%;
    text-align: center;
    color: white;

    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.icons a{
    color: white;
}
    
.contact{
    display: block;
    padding: 5px 0;
}

.icon{
    margin: 0 10px;
    width: min(12%, 80px);
}

#githubIcon{
    width: min(12%, 80px);
}

/*------------------------SECTION FOOTER------------------------

footer{
    background-color:#D3D3D3;
    height: 50px;
    text-align: center;
    position: relative;
}

footer p{
    width: 100%;
    margin: 0;
    font-size: 14px;

    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

*/

